--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "shortid": "^2.2.16",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/shortid": "^0.0.32",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "postcss": "^8.4.32",
